third_party/move/move-compiler-v2/tests/checking/control_flow/loop_labels_parse_err2.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/control_flow/loop_labels_parse_err2.move:3:13
  │
3 │         'a: if (true) false else true
  │             ^^
  │             │
  │             Unexpected 'if'
  │             Expected one of: 'while' or 'loop'
